--- a/learning_journal/tox.ini
+++ b/learning_journal/tox.ini
@@ -2,7 +2,7 @@
 envlist = py27, py36
 
 [testenv]
-commands = py.test --cov=pyramid_learning_journal
+commands = py.test --cov=learning_journal
 deps =
     pytest
     pytest-cov
