--- a/learning_journal/development.ini
+++ b/learning_journal/development.ini
@@ -14,7 +14,8 @@ pyramid.default_locale_name = en
 pyramid.includes =
     pyramid_debugtoolbar
 
-sqlalchemy.url = postgres://kurtrm:hofbrau@localhost:5432/learning_journal
+#sqlalchemy.url = postgres://kurtrm:hofbrau@localhost:5432/learning_journal
+sqlalchemy.url = postgres:///entries
 
 # By default, the toolbar only appears for clients from IP addresses
 # '127.0.0.1' and '::1'.
