add tests for step4

--- a/learning_journal/tox.ini
+++ b/learning_journal/tox.ini
@@ -2,7 +2,7 @@
 envlist = py27, py36
 
 [testenv]
-commands = py.test --cov=learning_journal
+commands = py.test learning_journal --cov-report term-missing
 deps =
     pytest
     pytest-cov
